<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Where Is My Money</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_login_login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_display_message">DisplayMessageActivity</string>
    <string name="edit_userID">Enter userID</string>
    <string name="edit_password">Enter password</string>
    <string name="team_name"> ( ͡° ͜ʖ ͡° ) </string>
    <string name="button_createAccount">Want to create a new account? Click here!</string>
    <string name="button_goToLogin">Already have an account? Click here!</string>
    <string name="button_BackToWelcome">Back To Welcome Page</string>
    <string name="button_reject_registration">Wait, go back!</string>
    <string name="button_goToLoginFromConfirmRegistration">Click here to login</string>
    <string name="button_register_another">Want to create another account? Click here!</string>
    <string name="button_new_account">Create a new account</string>
    <string name="text_view_account">Press menu to select from an existing account</string>
    <string name="text_new_account_instruction">Fill out all boxes and confirm your account creation</string>
    <string name="text_account_full_name">Account full name</string>
    <string name="edit_account_full_name"></string>
    <string name="text_account_display_name">Account display name</string>
    <string name="edit_account_display_name"></string>
    <string name="text_account_balance">Account balance</string>
    <string name="edit_account_balance"></string>
    <string name="text_account_interest_rate">Account interest rate</string>
    <string name="edit_account_interest_rate"></string>
    <string name="button_register_confirm">Confirm</string>
    <string name="button_create_account_reject">I will do it later</string>
    <string name="button_back_from_login">Back</string>
    <string name="button_create_new_transaction">Add a new transaction</string>
    <string name="text_select_transaction_type">Click below to select your transaction type:</string>
    <string name="button_new_deposit">Deposit</string>
    <string name="button_new_withdrawal">Withdrawal</string>
    <string name="button_goBackToAccountInfoFromNewTransaction">Go back!</string>
    <string name="edit_deposit_source">Source</string>
    <string name="edit_deposit_amount">Amount</string>
    <string name="edit_deposit_effective_date">Effective Date</string>
    <string name="button_confirm_deposit">Confirm</string>
    <string name="button_cancel_deposit">Cancel</string>
    <string name="text_deposit_instructions">Fill out the fields below and click confirm to create a new deposit:</string>
    <string name="text_withdrawal_instructions">Fill out the fields below and click confirm to make a withdrawal from your account:</string>
    <string name="edit_withdrawal_reason">Reason</string>
    <string name="edit_withdrawal_expense_category">Expense Category</string>
    <string name="edit_withdrawal_amount">Amount</string>
    <string name="button_withdrawal_confirm">Confirm</string>
    <string name="button_withdrawal_cancel">Go back!</string>
    <string name="edit_withdrawal_effective_date">Effective Date</string>
    <string name="moe_money">moe_money</string>
    <string name="text_forgot_password">Forgot your password?</string>
    <string name="edit_text_email_address">Email Address</string>
    <string name="text_view_forgot_password_message">Give us either your username or email address and we\'ll send you a new password</string>
    <string name="button_send_new_password">Send new password</string>
    <string name="button_back_to_login">Back to login screen</string>
    <string name="text_view_login_title">Where is YOUR money?</string>
    <string name="text_view_register_title">Fill out the fields to complete your registration.</string>
    <string name="edit_text_first_name">First Name</string>
    <string name="edit_text_last_name">Last Name</string>
    <string name="edit_text_username">Username</string>
    <string name="edit_text_password">Password</string>
    <string name="edit_text_confirm_password">Confirm Password</string>
    <string name="button_create_account_confirm">Confirm</string>
    <string name="button_login_register">Register for free</string>
    <string name="text_view_login_text1">No Account? No Problem!</string>
    <string name="text_view_confirm_registration_title">Congratulations on creating your account!</string>  
    <string name="button_view_report">View Report</string>   
    <string name="button_generate_report">Generate Report</string>
    <string name="text_view_report_start_date">From:</string>  
    <string name="text_view_report_end_date">To:</string>  
    <string name="text_account_table_head_accName">Name</string>  
    <string name="text_account_table_head_balance">Balance</string>  
    <string name="text_account_table_head_intRate">Interest Rate</string>
    <string name="button_log_out_home">Return Home</string>
    <string name="text_view_log_out_title">You have successfully logged out!</string>
    <string name="action_search">search</string>
    <string name="action_settings">settings</string>
    <string name="action_log_out">log out</string>  
    
</resources>
