<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_deposit_instructions"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:hint="@string/edit_deposit_source"
        android:id="@+id/edit_deposit_source"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:hint="@string/edit_deposit_amount"
        android:id="@+id/edit_deposit_amount"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="numberDecimal"/>

    <EditText
        android:hint="@string/edit_deposit_effective_date"
        android:id="@+id/edit_deposit_effective_date"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="date" />

    <Button
        android:id="@+id/button_confirm_deposit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_confirm_deposit" />

    <Button
        android:id="@+id/button_cancel_deposit"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/button_cancel_deposit" />

</LinearLayout>
