<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/moe_money_background"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="1"
    tools:context=".Forgot_password" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/text_view_forgot_password_message" />

    <EditText
        android:id="@+id/edit_text_email_address"
        style="@style/custom_edit_text_rounded"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_text_email_address" />

    <EditText
        android:id="@+id/edit_text_login_username"
        style="@style/custom_edit_text_rounded"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edit_text_username" />

    <Button
        android:id="@+id/button_send_new_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/custom_button_sorbus"
        android:layout_marginTop="10dp"
        android:text="@string/button_send_new_password" />

</LinearLayout>
