<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/moe_money_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AccountInfo" >

    <Button
        android:id="@+id/bNewAccount"
        style="@style/custom_button_sorbus"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/button_new_account" />

    <Button
        android:id="@+id/button_view_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bNewAccount"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:text="@string/button_view_report" />

    <TableLayout
        android:id="@+id/tableLayout_account_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:stretchColumns="*" >

        <TableRow>
            <TextView
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/text_account_table_head_accName"
                android:textSize="15sp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/text_account_table_head_balance"
                android:textSize="15sp"
                android:textAppearance="?android:attr/textAppearanceMedium"/>

            <TextView
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/text_account_table_head_intRate"
                android:textSize="15sp"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </TableRow>

    </TableLayout>

    <ScrollView
        android:id="@+id/scrollView_account_details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button_view_report"
        android:layout_below="@+id/tableLayout_account_head"
        android:layout_centerHorizontal="true" >

        <TableLayout
            android:id="@+id/tableLayout_account_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="*" >
        </TableLayout>
    </ScrollView>

</RelativeLayout>